# univerzita-kona-api

./: README.md  pyproject.toml  run.py
app/: __init__.py  api.py  config.py  models.py
migrations/: env.py
migrations/versions/: 135dafe820b7_add_payment_table.py  84f6d311a133_v1_tables.py  a1167a222783_v1_tables.py  af619b78842b_payment_model.py
