[tool.poetry]
name = "univerzita-kona-api"
version = "0.1.0"
description = ""
authors = ["Matúš Ferech <matus.ferech@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.3"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
